<resources>
    <string name="app_name">Travel certificate</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="menu_certificates">Certificates</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_eula">EULA</string>
    <string name="menu_contribute">Contribute</string>
    <string name="no_description">Do not display reasons\' descriptions</string>
    <string name="credits">Credits</string>
    <string name="header_sub_title">for france mainland</string>
    <string name="profile_saved">Profile saved</string>
    <string name="create">Create</string>
    <string name="create_a_new_profile">Create a new profile</string>
    <string name="import_a_new_document">Import a new document</string>
    <string name="ok">OK</string>
    <string name="email_feedback_subject">Feedback - French travel certificate</string>
    <string name="email_feedback_body">Feel free to share your ideas with us…</string>
    <string name="rate">Rate</string>
    <string name="rate_on_google">Rate on Google Play</string>
    <string name="send_feedback">Feel free to send us your feedback</string>
    <string name="your_feedback_matters">Your feedback really matters to us. Please send us what
        you think we should do by email.</string>
    <string name="cancel">Cancel</string>
    <string name="send_email">Send us an email</string>
    <string name="do_not_rate">Don\'t rate</string>
    <string name="review_the_app">Please give us a review</string>
    <string name="help_us_by_reviewing">The best way to help the app and to thank its creators is
        to rate the app on Google Play and to leave a good review.</string>
    <string name="document_path">Document\'s path</string>
    <string name="custom_name">Custom name</string>
    <string name="very_satisfied">Very satisfied</string>
    <string name="satisfied">Satisfied</string>
    <string name="moderately_satisfied">Moderately satisfied</string>
    <string name="unsatisfied">Unsatisfied</string>
    <string name="very_unsatisfied">Very unsatisfied</string>
    <string name="are_you_satisfied">Are you satisfied with the app ?</string>
    <string name="share_to_your_friends">Share to your friends</string>
    <string name="app_shared_text">For your travel certificates, use :
        https://play.google.com/store/apps/details?id=com.pi.fcertif.
        Easy to use, fast, free, ad-free and open-source.</string>
    <string name="time_format">HHmm</string>
    <string name="action_delete">Delete</string>
    <string name="hours_between_0_23">Hours must be between 0 and 24</string>
    <string name="minutes_between_0_59">Minutes must be between 0 and 59</string>
    <string name="month_between_1_12">Month must be between 1 and 12</string>
    <string name="help_to_translate">Help to translate</string>
    <string name="help_to_design">Help to design</string>
    <string name="help_to_design_text">Feel free to help us to improve the app\'s design (logo,
        banner, mockups…) by clicking the below button.</string>
    <string name="help_to_code">Help to code</string>
    <string name="help_to_code_text">We need help to fix bugs and add new features, feel free to
    make any pull request. If your pull request is approved your name or username will be added to
    the credits.</string>
    <string name="help_to_translate_text">We need your help to translate the app in order to not
        forget anyone. You can also notify us of any typos or mistakes made in any language. To
        help us please click on the bellow button "Help us to translate".</string>
    <string name="create_certificate">Create certificate</string>
    <string name="select_a_profile">Select a profile</string>
    <string name="create_a_certificate">Create a certificate</string>
    <string name="menu_settings">Settings</string>
    <string name="open_source_code">Open-source code</string>
    <string name="open_source_text">To see how we manage your data and how the application works
        you can see the code source of the application (written in Kotlin) at:</string>
    <string name="open_source_link" translatable="false">
        https://github.com/PeredurOmega/FrenchTravelCertificate</string>
    <string name="eula">EULA</string>
    <string name="exit_date">Exit date (dd/mm/yyyy)</string>
    <string name="exit_time">Exit time (HH:mm)</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="main_profile">Main profile</string>
    <string name="birth_date">Birth date (dd/mm/yyyy)</string>
    <string name="birth_place">Birth place</string>
    <string name="address">Current address</string>
    <string name="city">Current city</string>
    <string name="postal_code">Current postal code</string>
    <string name="no_certificate">You have no certificate</string>
    <string name="no_certificate_explanation_profile_filled">You will find all your certificates
        here. By clicking on it you will display their filled form and their QR Code..</string>
    <string name="eula_content_part_1">Applicable from: 12 April 2020</string>
    <string name="eula_content_part_2">(Note: all the clauses contained in this agreement are
        considered known, therefore you have to read them entirely)</string>
    <string name="eula_content_part_3">This End-User Licence Agreement (“EULA”) constitutes an
        agreement between you and Paul SOUTEYRAT (herein referred to as the “Owner”) with regard
        to the "Travel certificate" (also called "Attestation de déplacement" in French)
        Application for Android (herein referred to as “Software Product”, “Software”, or simply
        “The Application”). By installing the Software, you are agreeing to be bound by the terms
        of this licence agreement.</string>
    <string name="eula_content_part_4">Your use of the Software (as specified below) is subject to
        the terms and conditions set forth in this EULA. If you do not accept the terms of this
        EULA, do not install (or uninstall) the Software.</string>
    <string name="eula_content_part_5">1. Licence. The Software is licenced, not sold.
        The Owner grants you a non-exclusive, non-transferable, non-sublicensable, limited right
        and licence to use one copy of the Software for your personal non-commercial use on a
        single device. The rights granted herein are subject to your compliance with this EULA.
        The Software is being licenced to you and you hereby acknowledge that no title or ownership
        in the Software is being transferred or assigned and this EULA is not to be construed as a
        sale of any rights in the Software. You may see the full license (only available in
        english) of the source code at:
    </string>
    <string name="eula_content_part_6">2. Restrictions of use. Unless the Owner has authorized you
        to distribute the Software, you shall not make or distribute copies of the Software or
        transfer the Software from one device to another. You shall not decompile, reverse engineer,
        disassemble, include in other software, or translate the Software, or use the Software for
        any commercial purposes. You shall not modify, alter, change or otherwise make any
        modification to the Software or create derivative works based upon the Software. You shall
        not rent, lease, resell, sub-licence, assign, distribute or otherwise transfer the Software
        or this licence. Any attempt to do so shall be void and of no effect.</string>
    <string name="eula_content_part_7">3. Copyright. You acknowledge that no title to the
        intellectual property in the Software is transferred to you. You further acknowledge that
        title and full ownership rights to the Software will remain the exclusive property of
        the Owner, and you will not acquire any rights to the Software. You shall not remove
        or obscure the Owner\'s copyright, trade mark or other proprietary notices from any of the
        materials contained in this package or downloaded together with the Software.</string>
    <string name="eula_content_part_8">4. Disclaimer of warranty. The Software is provided “AS IS”,
        without warranty of any kind. We disclaim and make no express or implied warranties and
        specifically disclaim the warranties of merchantability, fitness for a particular purpose
        and non-infringement of third-party rights. The entire risk as to the quality and
        performance of the Software is with you. We do not warrant that the functions contained in
        the Software will meet your requirements or that the operation of the Software will be
        error-free.</string>
    <string name="eula_content_part_9">5. Limitation of liability. In no event will the Owner be
        liable for special, incidental or consequential damages resulting from possession, access,
        use or malfunction of the Software, including but not limited to damages to property,
        loss of goodwill, computer or mobile device malfunction and, to the extent permitted by
        law, damages for personal injuries, property damage, lost profits or punitive damages from
        any causes of action arising out of or related to this EULA or the Software, whether
        arising in tort (including negligence), contract, strict liability or otherwise and whether
        or not the Owner has been advised of the possibility of such damages.</string>
    <string name="eula_content_part_10">Because some states/countries do not allow certain
        limitations of liability, this limitation of liability shall apply to the fullest extent
        permitted by law in the applicable jurisdiction. This limitation of liability shall not be
        applicable solely to the extent that any specific provision of this limitation of liability
        is prohibited by any federal, state, or municipal law, which cannot be pre-empted. This
        EULA gives you specific legal rights, and you may have other rights that vary from
        jurisdiction to jurisdiction.</string>
    <string name="eula_content_part_11">In no event shall the Owner’s liability for all damages
        (except as required by applicable law) exceed the actual price paid by you for use of
        the Software (supported by an invoice).</string>
    <string name="eula_content_part_12">6. Privacy. The Software can not collect any in-app data
        for sending it to an other server or device. Your info in your profile and your
        certificates are fully stored in the internal storage of your device and are not and can
        not be sent to any device, person or institution. The Software may still collect data to
        detect bugs and especially to know when the app crashes. But all data are anonymized and
        are just used for the purpose of improving the Software. The Software may also collect
        the number of "app launches" for statistical purposes.</string>
    <string name="eula_content_part_13">7. Indemnity. You agree to indemnify, defend and hold the
        Owner harmless from and against any and all damages, losses and expenses arising directly
        or indirectly from: (i) your acts and omissions to act in using the Software pursuant to
        the terms of the EULA; or (ii) your breach of this EULA.</string>
    <string name="eula_content_part_14">Finally, everyone involved in the creation of this
        application, wishes you to stay safe (and home as long as much as possible). We hope you
        will use this application wisely.</string>
    <string name="people_to_credit">Creator : Paul SOUTEYRAT. Based on the
        work provided by the French Ministry of Home Affairs at:</string>
</resources>