<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pi.fcertif.ui.home.HomeFragment"
        android:label="@string/menu_certificates"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profiles"
        android:name="com.pi.fcertif.ui.profiles.ProfilesFragment"
        android:label="@string/menu_profiles"
        tools:layout="@layout/fragment_profiles" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.pi.fcertif.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_eula"
        android:name="com.pi.fcertif.ui.eula.EulaFragment"
        android:label="@string/menu_eula"
        tools:layout="@layout/fragment_eula" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pi.fcertif.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_contribute"
        android:name="com.pi.fcertif.ui.contribute.ContributeFragment"
        android:label="@string/menu_contribute"
        tools:layout="@layout/fragment_contribute" />
</navigation>