<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contribute.ContributeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/open_source_code"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/open_source_text"
            android:textStyle="italic" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:autoLink="web"
            android:text="@string/open_source_link"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/help_to_translate"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/help_to_translate_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/helpToTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_to_translate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/help_to_code"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/help_to_code_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/helpToCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_to_code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/help_to_design"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/help_to_design_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/helpToDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_to_design"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/credits"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:text="@string/people_to_credit" />
    </LinearLayout>
</ScrollView>